--- a/frontend/account_dashboard.html
+++ b/frontend/account_dashboard.html
@@ -20,7 +20,9 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
-            <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Account Dashboard</h1>
+            <header class="app-page-header">
+            <h1 class="app-page-title">Account Dashboard</h1>
+            </header>
             <p class="mb-4">See an overview of account balances and recent activity. Charts and tables reveal how money flows through each account. Sort codes and account numbers are shown where applicable; credit cards list only their card number.</p>
             <div class="cards">
                 <div id="accounts-table"></div>
