--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,7 +35,7 @@
                                 <i class="fas fa-shield-alt text-slate-600" aria-hidden="true"></i>
                                 Financial operations overview
                             </span>
-                            <h1 class="text-4xl font-semibold leading-tight md:text-5xl">Operational visibility for <span id="landing-site-name">Finance Manager</span></h1>
+                            <h1 class="app-page-title text-4xl font-semibold leading-tight md:text-5xl">Operational visibility for <span id="landing-site-name">Finance Manager</span></h1>
                             <p class="text-base text-slate-600">Track account activity, reconcile imports, and review reporting in one place. The platform is designed for consistent financial controls and clear audit trails.</p>
                             <div class="flex flex-wrap gap-3">
                                 <a href="upload.html" class="inline-flex items-center justify-center rounded-full bg-indigo-600 px-6 py-3 text-base font-semibold text-white shadow-sm transition hover:bg-indigo-700" aria-label="Upload transactions">
