--- a/frontend/monthly_dashboard.html
+++ b/frontend/monthly_dashboard.html
@@ -21,7 +21,9 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="ops-main flex-1 min-w-0 overflow-x-auto">
-            <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Monthly Dashboard</h1>
+            <header class="app-page-header">
+            <h1 class="app-page-title">Monthly Dashboard</h1>
+            </header>
             <p class="mb-4">View income and outgoings for a chosen month. Compare different months to spot trends and track progress toward your goals.</p>
             <section class="ops-section">
                 <form class="ops-form-grid cols-3" aria-label="Monthly dashboard filters">
