--- a/frontend/projects.html
+++ b/frontend/projects.html
@@ -21,7 +21,9 @@
 <div class="flex min-h-screen">
     <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
     <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
-        <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Projects</h1>
+        <header class="app-page-header">
+        <h1 class="app-page-title">Projects</h1>
+        </header>
         <p class="mb-4">Review your planned projects, explore costs and compare their priorities.</p>
 
         <section class="grid gap-6 xl:grid-cols-3 auto-rows-min">
