--- a/frontend/ai_feedback.html
+++ b/frontend/ai_feedback.html
@@ -17,7 +17,9 @@
 <div class="flex min-h-screen">
     <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
     <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
-        <h1 class="text-2xl font-semibold mb-4 text-indigo-700">AI Feedback</h1>
+        <header class="app-page-header">
+        <h1 class="app-page-title">AI Feedback</h1>
+        </header>
         <p class="mb-4">Request an AI-generated overview of your finances for the last 12 months.</p>
         <section>
             <button id="run" class="bg-indigo-600 text-white px-4 py-2 rounded">
