--- a/frontend/all_years_dashboard.html
+++ b/frontend/all_years_dashboard.html
@@ -20,7 +20,9 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
-            <h1 class="text-2xl font-semibold mb-4 text-indigo-700">All Years Dashboard</h1>
+            <header class="app-page-header">
+            <h1 class="app-page-title">All Years Dashboard</h1>
+            </header>
             <p class="mb-4">Compare financial totals across every recorded year to reveal long-term trends and patterns in your finances.</p>
 
             <h2 class="text-xl font-semibold mt-6 mb-2">Tag Totals</h2>
