--- a/frontend/export.html
+++ b/frontend/export.html
@@ -17,7 +17,9 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
-            <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Exports</h1>
+            <header class="app-page-header">
+            <h1 class="app-page-title">Exports</h1>
+            </header>
             <p class="mb-4">Download transactions for a chosen period in your preferred format.</p>
             <section class="space-y-4">
                 <h2 class="text-xl font-semibold">Create Export</h2>
