--- a/frontend/graphs.html
+++ b/frontend/graphs.html
@@ -17,7 +17,9 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-4">
-            <h1 class="text-2xl font-semibold text-indigo-700">Graphs</h1>
+            <header class="app-page-header">
+            <h1 class="app-page-title">Graphs</h1>
+            </header>
             <p class="mb-4">Explore a collection of charts that illustrate your income and spending patterns. Choose a year to see how your finances evolve and compare categories or tags visually.</p>
             <label for="year-select" class="block">Year:
                 <select id="year-select" class="border p-2 rounded w-full"></select>
