--- a/frontend/ignored.html
+++ b/frontend/ignored.html
@@ -17,7 +17,9 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
-            <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Ignored Transactions</h1>
+            <header class="app-page-header">
+            <h1 class="app-page-title">Ignored Transactions</h1>
+            </header>
             <p class="mb-4">Transactions tagged with <strong>IGNORE</strong> are hidden from dashboards and reports. Use this page to review and restore them.</p>
             <div id="ignored-table"></div>
         </main>
