--- a/frontend/palette.html
+++ b/frontend/palette.html
@@ -16,7 +16,9 @@
   <div class="flex min-h-screen">
     <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
     <main class="flex-1 p-6">
-      <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Palette Settings</h1>
+      <header class="app-page-header">
+      <h1 class="app-page-title">Palette Settings</h1>
+      </header>
 
       <div class="cards space-y-4">
         <ul class="list-disc pl-5 text-gray-700">
