--- a/frontend/pivot.html
+++ b/frontend/pivot.html
@@ -20,7 +20,9 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
-            <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Pivot Analysis</h1>
+            <header class="app-page-header">
+            <h1 class="app-page-title">Pivot Analysis</h1>
+            </header>
             <p class="mb-4">Explore transactions using a flexible pivot table. Choose a year or analyse all recorded data.</p>
             <section class="space-y-4">
                 <div class="flex flex-col md:flex-row md:items-end md:space-x-4 space-y-4 md:space-y-0">
