--- a/frontend/project_add.html
+++ b/frontend/project_add.html
@@ -18,7 +18,9 @@
 <div class="flex min-h-screen">
     <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
     <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
-        <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Add Project</h1>
+        <header class="app-page-header">
+        <h1 class="app-page-title">Add Project</h1>
+        </header>
         <p class="mb-4">Capture ideas for home projects and detail their costs and benefits.</p>
 
         <section class="cards">
