--- a/frontend/projects_archived.html
+++ b/frontend/projects_archived.html
@@ -19,7 +19,9 @@
 <div class="flex min-h-screen">
     <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
     <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
-        <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Archived Projects</h1>
+        <header class="app-page-header">
+        <h1 class="app-page-title">Archived Projects</h1>
+        </header>
         <p class="mb-4">Review projects that have been archived. Restore any project to make it active again.</p>
         <section class="cards">
             <div id="archived-projects-table"></div>
