--- a/frontend/transaction.html
+++ b/frontend/transaction.html
@@ -24,7 +24,9 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
-            <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Transaction Details</h1>
+            <header class="app-page-header">
+            <h1 class="app-page-title">Transaction Details</h1>
+            </header>
             <p class="mb-4">Review or edit the information for a single transaction. Changes here immediately update dashboards, reports and budgets.</p>
             <div id="transaction-details" class="mt-4"></div>
         </main>
