Standardize primary content surfaces across pages

--- a/frontend/missing_tags.html
+++ b/frontend/missing_tags.html
@@ -21,7 +21,9 @@
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Missing Tags</h1>
             <p class="mb-4">Identify transactions that have not yet been tagged so you can assign categories before they slip through your reports.</p>
-            <div id="untagged-table"></div>
+            <section class="cards cards-tight">
+                <div id="untagged-table"></div>
+            </section>
         </main>
     </div>
     <script src="js/menu.js"></script>
