--- a/frontend/categories.html
+++ b/frontend/categories.html
@@ -20,16 +20,20 @@
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Manage Categories</h1>
             <p class="mb-4">Create categories and assign tags to organise your transactions. A well-maintained list keeps reports clear and makes searching easier.</p>
+            <section class="cards cards-tight">
             <form id="category-form" class="space-y-4">
                 <label class="block">Category Name<br><input type="text" id="category-name" class="border p-2 rounded w-full" data-help="Name for the category"></label>
                 <label class="block">Description<br><textarea id="category-description" class="border p-2 rounded w-full" data-help="Description for the category"></textarea></label>
                 <button type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded">Create Category</button>
             </form>
+            </section>
 
-            <div id="category-layout" class="mt-6 flex flex-col gap-4">
+            <section class="cards mt-6">
+                <div id="category-layout" class="flex flex-col gap-4">
                 <div id="unassigned"></div>
                 <div id="category-container" class="flex flex-col gap-4"></div>
-            </div>
+                </div>
+            </section>
         </main>
     </div>
     <script src="js/menu.js"></script>
