--- a/frontend/all_years_dashboard.html
+++ b/frontend/all_years_dashboard.html
@@ -14,6 +14,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="stylesheet" href="https://unpkg.com/tabulator-tables@6.3.0/dist/css/tabulator_simple.min.css">
+    <link rel="stylesheet" href="operational_ui.css">
 
 </head>
 <body class="bg-gradient-to-b from-indigo-200 via-slate-100 to-white">
